:rocket: Added properties' pagination system!